# apy

./: .bump2version.cfg  .bumpversion.cfg  .editorconfig  .gitignore  .mise.toml  .pre-commit-config.yaml  README.md  cliff.toml  pylintrc  pyproject.toml  pytest.ini  requirements-dev.txt  setup.py
.github/workflows/: ci.yaml
apy/: __init__.py  anki.py  cli.py  config.py  convert.py  note.py  utilities.py
completion/: _apy  apy.fish
docker/: Dockerfile
src/apy/: __init__.py  anki.py  cards.py  cli.py  config.py  convert.py  fields.py  note.py  utilities.py
src/apyanki/: __init__.py  anki.py  cards.py  cli.py  config.py  console.py  fields.py  markdown_math.py  note.py  utilities.py
tests/: common.py  test_basics.py  test_batch_edit.py  test_cli.py  test_decks.py  test_errors.py  test_latex.py  test_markdown_latex_mode.py  test_models.py
tests/data/: apy.json  basic.md  deck.md  duplicate_test.md  duplicate_test_2.md  empty.md  external_ids.json  external_ids.md  external_ids_auto.md  external_ids_conflict.md  models.md
tests/data/test_base/: prefs21.db
tests/data/test_base/Test/: collection.anki2
