[project]
name = "apyanki"
version = "0.17.0"
description = "CLI script for interacting with local Anki collection"
authors = [{ name = "Karl Yngve Lervåg", email = "karl.yngve@lervag.net" }]
requires-python = "~=3.9"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "beautifulsoup4>=4.12.2",
    "click>=8.1.3",
    "markdown>=3.4.3",
    "readchar>=4.0.5",
    "markdownify>=0.11.6",
    "anki>=23.10",
    "html5lib~=1.1",
    "rich>=13.7.1",
]

[project.urls]
Homepage = "https://github.com/lervag/apy"
"Bug Tracker" = "https://github.com/lervag/apy/issues"

[project.scripts]
apy = "apyanki.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.3.1",
    "pylint>=3.0.2",
    "bump2version>=1.0.1",
    "black>=24.3.0",
    "mypy>=1.3.0",
    "types-beautifulsoup4>=4.12.0.5",
    "types-markdown>=3.4.2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest]
filterwarnings = ["ignore::DeprecationWarning:html5lib.*:"]

[tool.pylint.master]
init-hook = 'import sys; sys.path.append("/usr/share/anki")'

[tool.pylint.reports]
output-format = "colorized"

[tool.pylint.format]
max-line-length = "88"

[tool.pylint."messages control"]
max-statements = 75
disable = [
    "invalid-name",
    "too-many-branches",
    "too-many-instance-attributes",
]

[tool.mypy]
exclude = ".venv"
strict = true

[[tool.mypy.overrides]]
module = [
    "markdownify",
]
ignore_missing_imports = true

