[project]
name = "apyanki"
version = "0.19.1"
description = "CLI script for interacting with local Anki collection"
authors = [{ name = "Karl Yngve Lervåg", email = "karl.yngve@lervag.net" }]
requires-python = ">=3.13"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
]
dependencies = [
  "beautifulsoup4",
  "click",
  "markdown",
  "readchar",
  "markdownify",
  "anki>=25.9",
  "html5lib",
  "rich",
]

[project.urls]
Homepage = "https://github.com/lervag/apy"
"Bug Tracker" = "https://github.com/lervag/apy/issues"

[project.scripts]
apy = "apyanki.cli:main"

[dependency-groups]
dev = [
  "pytest",
  "mypy",
  "types-beautifulsoup4",
  "types-markdown",
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest]
filterwarnings = ["ignore::DeprecationWarning:html5lib.*:"]

[tool.mypy]
exclude = ["^tests/.*\\.py$"]
strict = true

[[tool.mypy.overrides]]
module = ["markdownify"]
ignore_missing_imports = true

[tool.basedpyright]
ignore = ["tests/*.py"]
reportImportCycles = false
reportExplicitAny = false
reportAny = false
reportImplicitStringConcatenation = false
